# video_features

./: .gitattributes  .gitignore  MANIFEST.in  pyproject.toml
tests/: utils.py
tests/clip/: test_clip.py
tests/i3d/: test_i3d.py
tests/r21d/: test_r21d.py
tests/raft/: test_raft.py
tests/resnet/: test_resnet.py
tests/s3d/: test_s3d.py
tests/timm/: test_timm.py
tests/vggish/: test_vggish.py
video_features/: __init__.py  __main__.py
video_features/configs/: __init__.py
video_features/models/: __init__.py
video_features/models/_base/: base_extractor.py  base_flow_extractor.py  base_framewise_extractor.py
video_features/models/clip/: extract_clip.py
video_features/models/i3d/: extract_i3d.py
video_features/models/r21d/: extract_r21d.py
video_features/models/raft/: extract_raft.py
video_features/models/raft/raft_src/: corr.py  raft.py
video_features/models/resnet/: extract_resnet.py
video_features/models/s3d/: extract_s3d.py
video_features/models/timm/: extract_timm.py
video_features/models/vggish/: extract_vggish.py
video_features/models/vggish/vggish_src/: vggish_input.py  vggish_postprocess.py  vggish_slim.py
video_features/utils/: __init__.py  utils.py
